assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto|Kanit:800&display=swap');

/* -------------------    Colours used   --------

light blue -   #A9B9DD  rgb(122, 155, 208)
light green    #A2D4AF
orange         #F3AF42  rgb(242, 157, 118)
light orange   #FEFAB1
light yellow   rgba(254, 250, 177, 0.3)
light green    #A2D4AF   rgb(103, 192, 138)

*/
/*  ---------------------------------   General settings ----------------------*/
* {
    padding: 0;
    margin: 0;
}

.row {
    margin: 0;
}

.no-text-decoration {
    text-decoration: none !important;
    color: #373737;
}

/*  ---------------------------------   Header ----------------------*/

#top {
    margin: 0;
    padding: 0;
}

.page-header h1 {
    font-family: 'Kanit', sans-serif;
    bottom: 0;
    text-align: center;
    font-size: 80px;
}

.page-header {
    height: 30vh;
    padding-top: 80px;
}

#intro-image {
    height: 100%;
    width: 100%;
    background-image: url("../images/city-monochrome.png");
    background-repeat: repeat-y;
  /*  -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    display: flex;
    justify-content: center;*/
    padding: 0;

    overflow: hidden;
}

#choice-container {
    width: 100%;
    height: 70vh;
    justify-content: center;
    align-items: center;
}

.choice-subcontainer {
    margin: 0;
    min-height: 490px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-radius: 10px;
    overflow: auto;
    display: inline-block;
    text-align: center;
    font-size: 1.2rem;
}

.choice-subcontainer h4 {
    font-family: 'Kanit', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.colour-beginners {
    background-color: rgba(254, 250, 177, 0.8);
}

.colour-advanced {
    background-color: rgba(122, 155, 208, 0.8);
}

.colour-pro {
    background-color: rgba(103, 192, 138, .8);
}

/* ---------------------  Buttons intro ----------------*/

.btn-choice {
    position: relative;
    border-radius: 5px;
    min-width: 100px;
    font-weight: bold;
    color: rgb(39, 39, 39);
    margin-top: 10px;
    box-shadow: 5px 5px 5px grey;
}

.btn-choice-beginners {
	background:linear-gradient(to bottom, #d0db2f 5%, #5c9e06 100%);
    background-color:#5c9e06;
    border-color: #5c9e06;
}

.btn-choice-beginners:hover {
	background:linear-gradient(to bottom, #5c9e06 5%, #d0db2f 100%);
	background-color:#5c9e06;
}

.btn-choice-advanced {
	background:linear-gradient(to bottom, rgb(122, 155, 208) 5%, rgb(36, 76, 141) 100%);
    background-color:rgb(122, 155, 208);
    border-color: rgb(36, 76, 141);
}

.btn-choice-advanced:hover {
	background:linear-gradient(to bottom, rgb(36, 76, 141) 5%, rgb(122, 155, 208) 100%);
	background-color:rgb(36, 76, 141);
}

.btn-choice-professionals {
	background:linear-gradient(to bottom, rgb(103, 192, 138) 5%, rgb(58, 119, 82) 100%);
    background-color:rgb(103, 192, 138);
    border-color: rgb(58, 119, 82);
}

.btn-choice-professionals:hover {
	background:linear-gradient(to bottom, rgb(58, 119, 82) 5%, rgb(103, 192, 138) 100%);
	background-color:rgb(58, 119, 82);
}

/* ---------------------  Animations ----------------*/

.fade-in-2 {
  animation: fadeIn ease-in-out 2s;
  -webkit-animation: fadeIn ease-in-out 2s;
  -moz-animation: fadeIn ease-in-out 2s;
  -o-animation: fadeIn ease-in-out 2s;
  -ms-animation: fadeIn ease-in-out 2s;
}

.fade-in-4 {
  animation: fadeIn ease-in-out 4s;
  -webkit-animation: fadeIn ease-in-out 4s;
  -moz-animation: fadeIn ease-in-out 4s;
  -o-animation: fadeIn ease-in-out 4s;
  -ms-animation: fadeIn ease-in-out 4s;
}

.fade-in-6 {
  animation: fadeIn ease-in-out 6s;
  -webkit-animation: fadeIn ease-in-out 6s;
  -moz-animation: fadeIn ease-in-out 6s;
  -o-animation: fadeIn ease-in-out 6s;
  -ms-animation: fadeIn ease-in-out 6s;
}

@keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-moz-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-o-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
  }
}

@-ms-keyframes fadeIn {
  0% {
    opacity:0;
  }
  100% {
    opacity:1;
    }
}

/* ---------------   Navbar ----------------------------*/

.navbar {
      position: fixed;
      background-color: #212529;
      width: 100%;
      height: 65px;
      bottom: 0;
      padding: 10px;
      z-index: 800;
}

.navbar h2 {
    font-size: 1.5rem;
}

.quick-links {
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: nowrap;
    flex-direction: row;
    color: rgb(44, 135, 201);
}

.quick-links h2 {
    text-decoration: none;
}

.item-label{
    display: none;
}

/* ----------------------------------  Sections general  ----------------------------*/

.image-container {
    justify-content: space-evenly;
}

.section-title {
    position: relative;
    color: #fafafa;
    top: 20px;
    left: 0;
    text-indent: 2rem;
    width: 100%;
    height: 4rem;

    text-transform: uppercase;
    font-family: 'Kanit', 'SegoeUI', sans-serif;
}

.card-container {
    width: 48%;
    height: 90%;
    float: left;
    padding: 30px 10px 10px 10px;
    text-align: justify;
    font-size: .9rem;
    margin: 0 10px 0 5px;
    border-radius: 10px;
}

.section-container {
    height: 100vh;
    width: 100%;
    margin: 0;
    padding-top: 15px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0;
}

.even-distribution {
    flex-direction: row;
    justify-content: space-evenly;
    align-items: flex-start;
    display: flex;
    align-items: flex-start;
}


.font-larger {
    font-size: 1.1rem;
}

/* ----------------------------------  Beginners section   ----------------------------*/

.beginners-image {
    background-image: url("../images/hotel-monochrome.png");
    background-repeat: repeat-y;
}

.skylines-logo {
    height: auto;
    width: 35%;
    float: right;
    margin-left: 15px;
}

.specs {
    text-justify: left;
    width: 48%;
    height: auto;
    min-height: 220px;
    display: inline-block;
    font-size: 0.8rem;
    padding: 10px;

    border: 0 0 #ce8634;
    background-color: #ce8634;
    box-shadow: 5px 5px 5px grey;
}

.no-decoration {
    list-style-type: none;
}

.logos {
    color: rgb(37, 37, 37);
}

.other-platforms {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#purchase{
    justify-content: space-evenly;
}

.buy {
    height: 80%;
    width: 100%;
}

.buy-caption {
    width: 160px;
    height: 100px;
    text-align: center;
}

.buy-caption a {
    color: #373737;
}

/* ---------------------------right side--------------------*/


.tips {
    min-height: 120px;
}

#start-image {
    height: 120px;
    width: 30%;

    background: url("../images/how-to-start.JPG");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#distrita-image {
    height: 120px;
    width: 30%;

    background: url("../images/distrita-start.JPG");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#wiki-image {
    height: 120px;
    width: 30%;

    background: url("../images/wiki.png");
    background-repeat:no-repeat;
    background-size: 100% 100%;
}

#playlist-image {
    height: 120px;
    width: 30%;

    background: url("../images/tutorial-playlist.jpg");
    background-repeat:no-repeat;
    background-size: 100% 100%;    
}

.tutorial-title-left {
    font-family: 'Kanit', 'Segoe', 'Verdana', 'Sans-serif';
    text-align: right;
    text-transform: uppercase;
}

.tutorial-title-right {
    font-family: 'Kanit', 'Segoe', 'Verdana', 'Sans-serif';
    text-align: left;
    text-transform: uppercase;
}

.caption-right {
    float: right;
    margin-left: 10px;
}

.caption-left {
    float: left;
    margin-right: 10px;
}

/* ----------------------------------  Advanced section   ----------------------------*/

/* ------------ Left side  ------------*/

.advanced-image {
    background-image: url("../images/vikersund.png");
    background-repeat: repeat-y;
}

/* ----------------------------------  Pro section   ----------------------------*/


.pro-image {
    background-image: url("../images/tram-square.png");
    background-repeat: repeat-y;
}

.bottom-margin {
    margin-bottom: 65px;
}
/* -------------------------------    Screen optimizations                 ----------------------------*/

@media screen and (max-width: 768px) {

    .choice-beginners {
        border-radius: 0;
        width: 100%;
    }

    .choice-advanced {
        border-radius: 0;
    }

    .choice-professionals {
        border-radius: 0;
    }

    .page-header {
        height: 30%;
        padding-top: 80px;
    }

    #choice-container {
        width: 100%;
        height: 70%;
        justify-content: center;
        align-items: center;
    }
    .choice-subcontainer {
        border-radius: 0;
    }

    .card-container {
        width: 100%;
        clear: both;
        padding: 10px;
        margin: 20px 0 0 0;
        text-align: justify;
        border-radius: 0;
    }

    .section-container {
        height: auto;
        width: 100%;
        margin: 0;
        padding-top: 15px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 0;
    }

    .image-container {
        display: flexbox;
    }

    .even-distribution {
        flex-direction: column;
        width: 100%;
        margin: 0;
        padding: 0;
            }

    .specs {
        text-justify: left;
        width: 100%;
        font-size: 0.8rem;
        padding: 10px;
        margin-bottom: 10px;

        background-color: #ce8634;
        box-shadow: none;
    }

    .p-font-larger {
    font-size: 1rem;
}

}

/* ---------------   Addittional helping elements- DELETE AFTER PUBLISHING! ----------------------------*/

.border {
    border: 2px solid red!important;
}

